# dorahacks.near

./: .gitignore  Cargo.toml  build.sh  dev-clean.sh  dev-deploy.sh  faucet.sh  package.json
.vim/: coc-settings.json
app/: postcss.config.js  tailwind.config.js  vite.config.ts
app/public/: index.html
app/src/: App.tsx  config.ts  index.tsx
app/src/views/: Home.tsx
dummy_ft/: Cargo.toml
dummy_ft/src/: lib.rs  owner.rs
fake_witgen/src/: lib.rs
grant/: Cargo.toml
grant/src/: config.rs  lib.rs  macros.rs  owner.rs  project.rs  round.rs
grant/tests/: test_core.rs  test_round.rs
scripts/: post-deploy-test.ts
ts/: grant.wit
ts/grant/: index.ts
